--- a/TP1/Site.Master
+++ b/TP1/Site.Master
@@ -54,10 +54,8 @@
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
    
                         <AnonymousTemplate>
-                            <ul>
-                                <li><a id="registerLink" runat="server" href="~/Forms/Registracion.aspx">Registrarse</a></li>
-                                <li><a id="loginLink" runat="server" href="~/Forms/Login.aspx">Login</a></li>
-                            </ul>
+                            <button type="button" class="btn btn-outline-primary" onclick="window.location='Registracion.aspx'">Registrarse</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="window.location='Login.aspx'">Login</button>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
