--- a/TP1/Site.Master
+++ b/TP1/Site.Master
@@ -61,7 +61,7 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <p>
-                                Hola <asp:LoginName runat="server" CssClass="username" /></a>!
+                                <asp:LoginName runat="server" CssClass="username" /></a>
                                 <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/Forms/Login.aspx" />
                             </p>
                         </LoggedInTemplate>
